ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: foodadvisor.backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodadvisor-backend
                port:
                  number: 1337
    - host: foodadvisor.client
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foodadvisor-frontend
                port:
                  number: 3000
